syntax = "proto3";
package proto;

option go_package = "./proto";

message RegulerCreateRequest {
    string CustomerID       = 1;
    string Bulan            = 3;
    string Tahun            = 4;
    int64 Infaq             = 6;
    int64 Zakat             = 7;
    int64 Shadaqah          = 8;
    int64 Ikhsan            = 9;
    int64 Sabil             = 10;
    int64 TabunganFitrah    = 11;
    int64 TabunganQurban    = 12;
    string Bina             = 13;
}

message RegulerResponse {
    string message = 1;
}

message RegulerGetResponse {
    string message = 1;
    int64 total_page = 2;
    repeated RegulerCreateRequest data = 3;
}

message RegulerGetRequest {
    int64 page = 1;
    int64 per_page = 2;
    string search = 3;
}

message RegulerUpdateRequest {
    string CustomerID       = 1;
    string BulanTahun       = 2;
    string Infaq            = 3;
    string Zakat            = 4;
    string Shadaqah         = 5;
    string Ikhsan           = 6;
    string Sabil            = 7;
    string TabunganFitrah   = 8;
    string TabunganQurban   = 9;
    string Bina             = 10;
    string ID               = 11;
}

service RegulersService {

    rpc CreateOrUpdate(RegulerCreateRequest) returns (RegulerResponse) {}

    rpc Get(RegulerGetRequest) returns (RegulerGetResponse) {}

    rpc Update(RegulerUpdateRequest) returns (RegulerResponse) {}
}

